--- a/src/style/app.scss
+++ b/src/style/app.scss
@@ -1,8 +1,7 @@
 // styles in src/style directory are applied to the whole page
-body {
-    background: #0147A7;
-    color: #fff;
-}
-a {
-    color: #03A9F4;
-}
+
+/*  Style global app */
+@import "styleApp.css";
+
+/* Style for highlight */ 
+@import "atelier-forest-dark.css";
