--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,17 +1,19 @@
-<header>
-  <nav>
-    <a [routerLink]="['']">Home</a>
-    <a [routerLink]="['about']">About</a>
-  </nav>
-</header>
-<main>
-  <h1>Hello from {{title}}!</h1>
-
-  <!-- Images (and assets) are parsed and loaded from within the public directory -->
-  <img src="/img/angular.png">
-
-  <router-outlet></router-outlet>
-</main>
-<footer>
-  <a [href]="url">Webpack Angular 2 Starter</a>
-</footer>
+<div class="body">
+    <div style="background:url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAMAAAADCAYAAABWKLW/AAAAF0lEQVQYV2NkQAKMULYPAwPDFhgHLAYAD6UBBHE0TWoAAAAASUVORK5CYII=) repeat;">
+        <header class="bk border-bottom-blue " style="margin-bottom: 5px;">
+            <my-menu></my-menu>
+        </header>
+        <main>
+            <div class="Container">
+                <div class="Middle">
+                    <router-outlet></router-outlet>
+                </div>
+            </div>
+        </main>
+        <!-- 
+        <footer style="text-align: center;">
+            footer
+        </footer>
+        -->
+    </div>
+</div>
