--- a/src/style/styleApp.css
+++ b/src/style/styleApp.css
@@ -83,4 +83,12 @@ pre {
     text-align: justify;
 }
 
+
+.btn-r-top {
+    position: absolute;
+    right: 20px;
+    top: -5px;
+    ;
+}
+
 /* Esse bloco será removido*/
