--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,14 @@
-<div class="col-lg-12">
+<div class="bk-panel-title add-border-panel"> <span>Code Igniter 4</span> </div>
+<div class="container-fluid">
+    <div class="row bk-panel add-border-panel">
+        <div *ngFor="let card of cards" class="col-xs-12 col-sm-6 col-md-3 col-lg-2">
+            <my-card [card]="card"></my-card>
+        </div>
+    </div>
+</div>
+
+
+<!--<div class="col-lg-12">
     <div class="bk-panel-title add-border-panel"> <span>Emxemplo de Código</span> </div>
 </div>
 <div class="container-fluid m-b-40">
@@ -29,9 +39,9 @@
             </div>
         </div>
     </div>
-</div>
+</div>-->
 
-<div class="bk-panel-title add-border-panel"> <span>Angular 2 </span> </div>
+<!--<div class="bk-panel-title add-border-panel"> <span>Angular 2 </span> </div>
 <div class="container-fluid">
     <div class="row">
         <div class="bk-panel add-border-panel ">
@@ -89,13 +99,4 @@
             </div>
         </div>
     </div>
-</div>
-
-<div class="bk-panel-title add-border-panel"> <span>Code Igniter 4</span> </div>
-<div class="container-fluid">
-    <div class="row bk-panel add-border-panel">
-        <div *ngFor="let card of cards" class="col-xs-12 col-sm-6 col-md-3 col-lg-2">
-            <my-card [card]="card"></my-card>
-        </div>
-    </div>
-</div>
+</div>-->
