--- a/src/style/app.scss
+++ b/src/style/app.scss
@@ -5,3 +5,36 @@
 
 /* Style for highlight */ 
 @import "atelier-forest-dark.css";
+
+html, body {
+    height: 100%;
+    justify-content: center;
+    overflow-x: hidden;
+    overflow-y: hidden;
+}
+
+/* Mover para o componente */
+code::-webkit-scrollbar
+{
+    height: 8px;
+}
+
+code::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+}
+
+code::-webkit-scrollbar-thumb {
+    -webkit-border-radius: 5px;
+    border-radius: 10px;
+    background: #3399ff; 
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5); 
+}
+
+/*
+pre::selection {
+    background: rgba(0,0,0,0.0) !important;  WebKit/Blink Browsers 
+}
+pre::-moz-selection {
+    background: rgba(0,0,0,0.0) !important;  Gecko Browsers 
+}
+*/
