--- a/src/app/@components/card/card.component.html
+++ b/src/app/@components/card/card.component.html
@@ -1,8 +1,16 @@
 <div class="panel">
-    <h2 class="text-centered">{{card.title}}</h2>
-    <p class="text-centered">
-        <img src="{{card.images}}" alt="{{card.info}}" class="rounded img-thumbnail">
-    </p>
-    <p class="text-justify">{{card.text}}</p>
-    <p class="text-centered"><a class="btn btn-primary btn-lg" href="{{card.link}}" role="button">{{card.linkTitle}}</a></p>
-</div>  
+    <h4 class="text-centered">{{capa.titulo}}</h4>    
+    <div class="text-centered">
+        <div class="img-panel">
+            <!-- <img src="{{capa.imagem}}" alt="{{card.info}}" class="rounded"> -->
+            <img src="{{capa.imagem}}" class="rounded">
+        </div>
+    </div>
+    <div class="text-centered" style="border-bottom: 1px solid #ffffff; padding-top: 10px; padding-left: 5px; padding-right: 5px;"> {{capa.subtitulo}} </div>
+    <div class="text-centered" style="min-height: 75px; padding-top: 10px;">
+        {{capa.descricao}}
+    </div>
+    <div class="text-centered">
+        <a class="btn btn-primary btn-lg" href="{{capa.link}}" role="button">{{capa.link_titulo}}</a>
+    </div>
+</div>
